--- a/Biblio.bib
+++ b/Biblio.bib
@@ -49,6 +49,37 @@
 @STRING{smr	 = {{SM Report}} }
 
 %------------------------------------------------------
+% Algorithms --------------------------------------------
+%------------------------------------------------------
+
+@inproceedings{Galetzka_et_al_2017,
+author = {Galetzka, Michael and Glauner, Patrick},
+year = {2017},
+month = {02},
+pages = {},
+title = {A Simple and Correct Even-Odd Algorithm for the Point-in-Polygon Problem for Complex Polygons},
+doi = {10.5220/0006040801750178}
+}
+
+@article{Shimrat_1962,
+author = {Shimrat, M.},
+title = {Algorithm 112: Position of Point Relative to Polygon},
+year = {1962},
+issue_date = {Aug. 1962},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {5},
+number = {8},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/368637.368653},
+doi = {10.1145/368637.368653},
+journal = {Commun. ACM},
+month = aug,
+pages = {434},
+numpages = {7}
+}
+
+%------------------------------------------------------
 % Meshfree --------------------------------------------
 %------------------------------------------------------
 
@@ -79,7 +110,6 @@ year = {1996}
 }
 
 
-
 @article{Molinos2020,
 author = {Molinos, M. and Navas, P. and Pastor, M. and Mart\'in Stickle, M.},
 journal = cmame,
@@ -103,6 +133,15 @@ publisher = {John Wiley {\&} Sons, Ltd},
 title = {{The material point method for simulation of thin membranes}},
 volume = {44},
 year = {1999}
+}
+
+@book{Allen_et_al_1989,
+author = {Allen, M. P. and Tildesley, D. J.},
+title = {Computer Simulation of Liquids},
+year = {1989},
+isbn = {0198556454},
+publisher = {Clarendon Press},
+address = {USA}
 }
 
 @article{E_Wobbes_2018,
