--- a/Figure-Damage.tex
+++ b/Figure-Damage.tex
@@ -12,7 +12,7 @@
     xtick       = {0.5,1},
     xticklabels = {$\mathbf{\omega}_n$,$\mathbf{\omega}_c$},
     ytick       = {0.5,1},
-    yticklabels = {$\mathbf{f}_c$,$\mathbf{f}_t$},
+    yticklabels = {$\mathbf{f}_n$,$\mathbf{f}_t$},
     samples     = 160,
     domain      = 0:1,
     xmin = 0, xmax = 1.2,
